--- a/templates/veterinaria/cliente.html
+++ b/templates/veterinaria/cliente.html
@@ -26,7 +26,7 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'clientes' %}">Clientes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'mascotas' %}">Mascotas</a>
+                    <a class="nav-link" href="{% url 'fichas' %}">Fichas clinicas</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'atenciones' %}">Atenciones</a>
@@ -42,7 +42,7 @@
         <div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
           <div class="container m-0 p-0">
             <h2>Editar datos del cliente</h2>
-                <form method="POST" action="{% url 'clienteEdit' cliente.id_cliente %}">
+                <form method="POST" action="{% if ficha_clinica and ficha_clinica.id %}{% url 'fichaEdit' ficha_clinica.id %}{% endif %}">
                     {% csrf_token %}
                     <div>
                       <div class="mb-3">
@@ -83,7 +83,7 @@
                       </div>
                   </div>
                   <div class="mb-3 text-center">
-                    <button type="button" class="btn btn-danger" onclick="window.location.href = '{% url 'clienteDel' cliente.id_cliente %}';">Eliminar cliente</button>
+                    <button type="button" class="btn btn-danger" onclick="window.location.href = '{% url 'clienteDel' cliente.id %}';">Eliminar cliente</button>
                     <button type="submit" class="btn btn-warning">Editar cliente</button>
                   </div>          
                 </form>
