--- a/templates/veterinaria/ficha_clinica.html
+++ b/templates/veterinaria/ficha_clinica.html
@@ -7,7 +7,7 @@
 {% block contenido %}
 <div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
   <div class="container m-0 p-0">
-    <h1>Ficha clinica</h1>
+    <h1>Ficha clinica N°{{ficha_clinica.id}}</h1>
     <form method="POST" action="{% url 'fichaEdit' ficha_clinica.id %}" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="row mt-5">
@@ -51,6 +51,19 @@
                     {{ form.sexo.label_tag }}
                     {{ form.sexo }}
                     {{ form.sexo.errors }}
+                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                </div>
+
+                <div class="mb-3">
+                    {{ form.id_raza.label_tag }}
+                    {{ form.id_raza }}
+                    {{ form.id_raza.errors }}
+                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                </div>
+                <div class="mb-3">
+                    {{ form.id_cliente.label_tag }}
+                    {{ form.id_cliente }}
+                    {{ form.id_cliente.errors }}
                     <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
                 </div>
             </div>
