--- a/templates/veterinaria/base.html
+++ b/templates/veterinaria/base.html
@@ -24,7 +24,7 @@
                   </li>
                   <!-- active" aria-current="page -->
                   <li class="nav-item">
-                    <a class="nav-link {% block fichas %}{% endblock %}" href="{% url 'fichas' %}">Fichas clinicas</a>
+                    <a class="nav-link {% block fichas %}{% endblock %}" href="{% url 'fichas' %}">Fichas</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link {% block atenciones %}{% endblock %}" href="{% url 'atenciones' %}">Atenciones</a>
