--- a/templates/veterinaria/fichas_clinicas.html
+++ b/templates/veterinaria/fichas_clinicas.html
@@ -41,7 +41,7 @@
             for (const campo in response.errors){
               $('#' + campo + '_errors').html(response.errors[campo]);
             }
-          } else { window.location.assign("{%url 'razas'%}") }
+          } else { window.location.assign("{%url 'fichas'%}") }
         }
       });
     });
