--- a/templates/veterinaria/atenciones.html
+++ b/templates/veterinaria/atenciones.html
@@ -27,11 +27,12 @@
 <div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
     <div class="container m-0 p-0">
       <h1 class="mt-3">Atenciones</h1>
+      {% if perms.veterinaria.add_atencion %}
       <!-- Button trigger modal -->
       <button type="button" class="btn btn-primary mb-5 mt-3 justify-content-end align-self-end" data-bs-toggle="modal" data-bs-target="#form_agregar_atencion">
         Agregar una atención
       </button>
-
+      {% endif %}
       <!-- Modal -->
       <div class="modal fade" id="form_agregar_atencion" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="form_agregar_atencionLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
