arreglando detalles y enviando excel

--- a/templates/veterinaria/atencion.html
+++ b/templates/veterinaria/atencion.html
@@ -30,9 +30,9 @@
         </div>
       </div>
       <div class="mb-3">
-        {{ form.id_ficha_clinica.label_tag }}
-        {{ form.id_ficha_clinica }}
-        {{ form.id_ficha_clinica.errors }}
+        {{ form.id_mascota.label_tag }}
+        {{ form.id_mascota }}
+        {{ form.id_mascota.errors }}
         <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
       </div>
       <div class="mb-3">
@@ -67,7 +67,7 @@
       </div>
   </div>
   <div class="mb-3 text-center">
-    <button type="button" class="btn btn-danger">Eliminar atención</button>
+    <a type="button" class="btn btn-danger" href="/atenciones/">Cancelar</a>
     <button type="submit" class="btn btn-warning">Editar atención</button>
   </div>
   </form>
