--- a/templates/veterinaria/cliente.html
+++ b/templates/veterinaria/cliente.html
@@ -1,95 +1,60 @@
-<!DOCTYPE html>
+{% extends "veterinaria/base.html" %}
+
 {% load static %}
-<html lang="es">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
-    <title>Catálogo clientes</title>
-  </head>
-  <body data-bs-theme="dark">
-    <div class="container-fluid m-0 p-0">
-      <div class="row">
-        <div class="col-xl-1 col-md-2 fixed-top col-12 d-inline-block m-0 p-0">
-          <nav class="navbar navbar-expand-md bg-body-tertiary h-100">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse vh-100 sticky-md-top" id="navbarNav">
-                <ul class="nav nav-pills flex-column w-100">
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'inicio' %}">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'clientes' %}">Clientes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'fichas' %}">Fichas clinicas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'atenciones' %}">Atenciones</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'inicio' %}">Razas</a>
-                  </li>
-                </ul>
+
+{% block titulo %}Cliente{% endblock %}
+
+{% block clientes %}active" aria-current="page{% endblock %}
+
+{% block contenido %}    
+<div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
+  <div class="container m-0 p-0">
+    <h2>Editar datos del cliente</h2>
+        <form method="POST" action="{% url 'clienteEdit' cliente.id %}">
+            {% csrf_token %}
+            <div>
+              <div class="mb-3">
+                {{ form.rut.label_tag  }}
+                {{ form.rut }}
+                {{ form.rut.errors }}
+                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
               </div>
-            </div>
-          </nav>
-        </div>
-        <div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
-          <div class="container m-0 p-0">
-            <h2>Editar datos del cliente</h2>
-                <form method="POST" action="{% if ficha_clinica and ficha_clinica.id %}{% url 'fichaEdit' ficha_clinica.id %}{% endif %}">
-                    {% csrf_token %}
-                    <div>
-                      <div class="mb-3">
-                        {{ form.rut.label_tag  }}
-                        {{ form.rut }}
-                        {{ form.rut.errors }}
-                        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                      </div>
-                      <div class="mb-3">
-                        {{ form.nombres.label_tag  }}
-                        {{ form.nombres }}
-                        {{ form.nombres.errors }}
-                        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                      </div>
-                      <div class="mb-3">
-                        {{ form.apellidos.label_tag  }}
-                        {{ form.apellidos }}
-                        {{ form.apellidos.errors }}
-                        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                      </div>
-                      <div class="mb-3">
-                        {{ form.fono_1.label_tag  }}
-                        {{ form.fono_1 }}
-                        {{ form.fono_1.errors }}
-                        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                      </div>
-                      <div class="mb-3">
-                        {{ form.fono_2.label_tag  }}
-                        {{ form.fono_2 }}
-                        {{ form.fono_2.errors }}
-                        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                      </div>
-                      <div class="mb-3">
-                        {{ form.email.label_tag  }}
-                        {{ form.email }}
-                        {{ form.email.errors }}
-                        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                      </div>
-                  </div>
-                  <div class="mb-3 text-center">
-                    <button type="button" class="btn btn-danger" onclick="window.location.href = '{% url 'clienteDel' cliente.id %}';">Eliminar cliente</button>
-                    <button type="submit" class="btn btn-warning">Editar cliente</button>
-                  </div>          
-                </form>
-            </div>
-      </div>
+              <div class="mb-3">
+                {{ form.nombres.label_tag  }}
+                {{ form.nombres }}
+                {{ form.nombres.errors }}
+                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+              </div>
+              <div class="mb-3">
+                {{ form.apellidos.label_tag  }}
+                {{ form.apellidos }}
+                {{ form.apellidos.errors }}
+                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+              </div>
+              <div class="mb-3">
+                {{ form.fono_1.label_tag  }}
+                {{ form.fono_1 }}
+                {{ form.fono_1.errors }}
+                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+              </div>
+              <div class="mb-3">
+                {{ form.fono_2.label_tag  }}
+                {{ form.fono_2 }}
+                {{ form.fono_2.errors }}
+                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+              </div>
+              <div class="mb-3">
+                {{ form.email.label_tag  }}
+                {{ form.email }}
+                {{ form.email.errors }}
+                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+              </div>
+          </div>
+          <div class="mb-3 text-center">
+            <button type="button" class="btn btn-danger" onclick="window.location.href = '{% url 'clienteDel' cliente.id %}';">Eliminar cliente</button>
+            <button type="submit" class="btn btn-warning">Editar cliente</button>
+          </div>          
+        </form>
     </div>
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-  </body>
-</html>
+</div>
+{% endblock %}
