--- a/templates/veterinaria/atencion_calendar.html
+++ b/templates/veterinaria/atencion_calendar.html
@@ -6,16 +6,34 @@
 {% block scripts %}
 <script src="{% static 'js/jquery-3.7.0.min.js' %}"></script>
 <script src="{% static 'vendor/fullcalendar-6.1.10/dist/index.global.js'%}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+
 
 <!-- Cargar aquí los valores del calendar -->
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     var calendarEl = document.getElementById('calendar');
+    var allAtenciones = [
+      {% for atencion in atenciones %}
+      {
+        title: '{{ atencion.id_veterinario.nombres }} - {{ atencion.id_mascota.nombre_mascota }}',
+        start: '{{ atencion.fecha_atencion|date:"Y-m-d" }}T{{ atencion.hora_ingreso|time:"H:i:s" }}',
+        end: '{{ atencion.fecha_atencion|date:"Y-m-d" }}T{{ atencion.hora_termino|time:"H:i:s" }}',
+        idVeterinario: {{ atencion.id_veterinario.id }},
+      },
+      {% endfor %}
+    ];
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
       themeSystem: 'bootstrap5',
-      height: 750,
+      height: 700,
       initialView: 'dayGridMonth',
+      selectable: true,
+      allDaySlot: false,
+      defaultTimedEventDuration: '00:45:00',
+      slotDuration: '00:45:00',
+      slotLabelInterval: 45,  
+      slotMinTime: '06:00:00',
       locale: 'es',
       headerToolbar: {
         left: 'prev,next today',
@@ -39,36 +57,53 @@
           buttonText: 'Día' // Nombre personalizado para el día
         }
       },
-      dateClick: function(info) {
-        // Abre el modal y establece la fecha en el formulario
-        openModalWithDate(info.date);
-      },
-      
       businessHours: {
-        daysOfWeek: [1, 2, 3, 4, 5], // Lunes a Viernes
+        dow: [1, 2, 3, 4, 5], // Lunes a Viernes
         startTime: '08:00', // Hora de inicio
         endTime: '17:00' // Hora de término
       },
-      events: [
-        {% for atencion in atenciones %}
-        {
-          title: '{{ atencion.id_veterinario.nombres}} - {{atencion.id_mascota.nombre_mascota }}',
-          start: '{{ atencion.fecha_atencion|date:"Y-m-d" }}T{{ atencion.hora_ingreso|time:"H:i:s" }}',
-          end: '{{ atencion.fecha_atencion|date:"Y-m-d" }}T{{ atencion.hora_termino|time:"H:i:s" }}'
-        },
-        {% endfor %}
-      ]
+      dateClick: function(info) {
+        if (info.view && info.view.type === 'dayGridMonth' || info.view.type === 'customMonth') {
+          var selectedDate = info.dateStr;
+          calendar.changeView('timeGridDay', selectedDate);
+        }
+      },
+      selectConstraint: "businessHours",
+      select: function(start, end, jsEvent, view) {
+        // Redirecciona a la 
+        if (start.view && start.view.type === 'dayGridMonth' || start.view.type === 'customMonth') {
+          var selectedDate = start.startStr;
+          calendar.changeView('timeGridDay', selectedDate);
+        } else {
+          console.log("Rango seleccionado:", start, end);
+        }
+      },
+      events: allAtenciones,
     });
 
     calendar.render();
-
+    
     function openModalWithDate(date) {
-      // Formatea la fecha en el formato que necesitas (ajusta según tus necesidades)
-      formatedDate= date.toISOString().split('T')[0];
-      // Abre el modal y establece la fecha en el formulario
+      formatedDate = date.toISOString().split('T')[0];
       $('#form_agregar_atencion').modal('show');
       $('#id_fecha_atencion').val(formatedDate);
     }
+
+    function cargarAtenciones() {
+      var selectedVeterinarioId = document.getElementById('veterinarioSelect').value;
+      if (!selectedVeterinarioId) {
+        return;
+      }
+
+      var filteredAtenciones = allAtenciones.filter(function(atencion) {
+        return atencion.idVeterinario == selectedVeterinarioId;
+      });
+
+      calendar.removeAllEvents();
+      calendar.addEventSource(filteredAtenciones);
+    }
+
+    document.getElementById('veterinarioSelect').addEventListener('change', cargarAtenciones);
   });
 </script>
 {% endblock %}
@@ -78,12 +113,16 @@
 {% block contenido %}
   <div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
     <div class="container m-0 p-0">
-      <h1 class="mt-3">Atenciones</h1>
+      <h1 class="mt-3">Reservas</h1>
       {% if perms.veterinaria.add_atencion %}
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary mb-3 mt-3 justify-content-end align-self-end" data-bs-toggle="modal" data-bs-target="#form_agregar_atencion">
-        Agregar una atención
-      </button>
+      <div class="mb-3">
+        <select class="form-select" id="veterinarioSelect" name="id_veterinario">
+          <option value="" selected disabled>Selecciona un veterinario</option>
+          {% for veterinario in veterinarios %}
+            <option value="{{ veterinario.id }}">{{ veterinario.rut }} {{veterinario.first_name}} {{veterinario.last_name}}</option>
+          {% endfor %}
+        </select>
+      </div>
       {% endif %}
       <div id='calendar'></div>
 
@@ -92,7 +131,7 @@
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
           <div class="modal-content">
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="form_agregar_atencionLabel">Crear atención</h1>
+              <h1 class="modal-title fs-5" id="form_agregar_atencionLabel">Crear reserva</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -156,7 +195,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <button type="submit" class="btn btn-primary">Crear atención</button>
+                <button type="submit" class="btn btn-primary">Reservar</button>
               </div>
             </form>
           </div>
